fixing stuff stage 5
